--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Custom rate limiters",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "author": "Naveen",
   "license": "ISC"
