--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
   "name": "custom-rate-limiters",
   "version": "1.0.1",
-  "description": "Custom rate limiters",
+  "description": "Rate limiters that support multiple algorithms and can be used to validate multiple limits for a feature if needed  ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\""
   },
-  "author": "Naveen",
-  "license": "ISC"
+  "keywords": [
+    "ratelimits",
+    "ratelimiting",
+    "ratelimiters",
+    "express",
+    "redis",
+    "sliding window",
+    "sliding window counter",
+    "fixed window",
+    "multiple algorithms",
+    "multiple ratelimits",
+    "custom ratelimits",
+    "middleware ratelimits",
+    "express rate limits",
+    "redis rate limits"
+  ],
+  "author": "Naveen Chelimilla",
+  "license": "MIT"
 }
